# nbim_case

./: .gitignore  README.md
backend/: README.md  api_server.py  break_detection_agent.py  config.py  consolidated_row_analysis_agent.py  data_ingestion.py  dividend_reconciliation_orchestrator.py  llm_agent.py  main.py  priority_classification_agent.py  prompts.json  pyproject.toml  reporting.py  root_cause_analysis_agent.py  team_resolution_agent.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: ActionsSection.tsx  AnalyzeControls.tsx  Header.tsx  IssuesSection.tsx  LoadingComponent.css  LoadingComponent.tsx  PipelineGraph.tsx  PipelineInsight.tsx  RowAnalysis.tsx
frontend/src/context/: DataProvider.tsx
frontend/src/types/: index.ts
